# ZIP

./: CMakeLists.txt  QrCodeGenerator.cpp  QrCodeGenerator.h  README.md  ZIPInventory.pro  advancedfilterdialog.cpp  advancedfilterdialog.h  dashboardwidget.cpp  dashboardwidget.h  database.cpp  database.h  labelprintdialog.cpp  labelprintdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrcodegen.cpp  qrcodegen.h
